Fix enrichment hangs